--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,70 @@
-.navbar {
-    list-style-type: none;
+* {
     margin: 0;
     padding: 0;
-    background-color: #333;
-}
-
-.navbar li {
-    display: inline;
-    margin: 10px;
-}
-
-.navbar a {
+    list-style: none;
     text-decoration: none;
-    color: #fff;
+    font-family: "Poppins", sans-serif;
+    box-sizing: border-box;
+}
+
+body {
+    background: #fff;
+}
+
+header {
+    width: 100%;
+    height: 80px;
+    background: #11101b;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 100px;
+}
+
+.logo img {
+    position: absolute;
+    top: 3px;
+    left: 40px; 
+    width: 120px;
+    height: auto;
+}
+
+.hamburger {
+    display: none;
+}
+
+.nav-bar ul {
+    display: flex;
+}
+
+.nav-bar ul li a {
+    display: block;
+    color: #fefefe;
+    font-size: 20px;
+    padding: 10px 25px;
+    border-radius: 50px;
+    transition: 0.2s;
+    margin: 0 5px;
+}
+
+.nav-bar ul li a:hover {
+    color: #11101b;
+    background: #fefefe;
+}
+
+.nav-bar ul li a:active {
+    color: #11101b;
+    background: #fefefe;
+}
+
+@media only screen and (max-width: 1320px) {
+    header {
+        padding: 0 50px;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    header {
+        padding: 0 30px;
+    }
 }
