--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 
 body {
     background: #fff;
+    margin: 0;
 }
 
 header {
@@ -65,6 +66,14 @@ header {
     border: 1px solid #ccc;
     border-radius: 5px;
 }
+
+.location-group h1{
+    width: 80%;
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+}
+
 .location h2 {
     color: #333;
 }
