--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,79 @@
 body {
     background: #fff;
     margin: 0;
+    background-image: url("../img/rest.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+}
+
+#welcome{
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: white;
+    font-size: 50px;
+}
+
+#welcome p{
+    text-align: center;
+}
+
+.cta-button{
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #FF5722; 
+    color: #fff;
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%; 
+    height: 30%; 
+    margin: 0 auto;
+}
+
+.cta-button:hover {
+    background-color: black;
+    text-decoration: underline;
+}
+
+#featured-items{
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: white;
+    font-size: larger;
+}
+
+#about-us{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: white;
+    font-size: 30px;
+}
+
+#about-us h2{
+    text-align: center;
+}
+
+#contact-info footer{
+    background-color: #11101b;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 header {
