--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,13 @@
 }
 
 body {
-    background: #fff;
-    margin: 0;
-    background-image: url("../img/rest.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100vh;
+  background: #fff;
+  margin: 0;
+  background-image: url("../img/rest.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
 }
 
 
@@ -77,13 +77,13 @@ body {
     text-decoration: underline;
 }
 
-#featured-items{
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    color: white;
-    font-size: larger;
+#featured-items {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: larger;
 }
 
 #contact-info footer{
@@ -114,10 +114,6 @@ header {
   height: auto;
 }
 
-.hamburger {
-  display: none;
-}
-
 .nav-bar ul {
   display: flex;
 }
@@ -132,9 +128,18 @@ header {
   margin: 0 5px;
 }
 
+.shopping-bag img {
+  width: 30px;
+  height: auto;
+}
+
 .nav-bar ul li a:hover {
   color: #11101b;
   background: #fefefe;
+}
+
+.nav-bar ul li a:hover img {
+  filter: invert(100%);
 }
 
 .nav-bar ul li a:active {
@@ -154,66 +159,66 @@ header {
   }
 }
 
-
-body, h1, h2, p, table {
-    margin: 0;
-    padding: 0;
-}
-
-/* Style for the "location-group" container */
-.location-group {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f5f5f5;
-}
-
-/* Style for the headings */
-h1, h2 {
-    color: #333;
-}
-
-/* Style for individual locations */
-.location {
-    margin: 20px 0;
-    padding: 10px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-/* Style for the "order-button" link (more subtle) */
-.order-button {
-    display: inline-block;
-    text-align: center;
-    background-color: #f5f5f5; /* Subtle background color */
-    color: #333; /* Subtle text color */
-    padding: 10px;
-    text-decoration: none;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-/* Style for the "hours-table" container */
-.hours-table {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #f5f5f5;
-}
-
-/* Style for the table */
+body,
+h1,
+h2,
+p,
 table {
-    width: 100%;
-    border-collapse: collapse;
+  margin: 0;
+  padding: 0;
 }
 
-/* Style for table headers */
+.location-group {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: rgb(255, 255, 255, 0.6);
+}
+
+.location {
+  margin: 20px 0;
+  padding: 10px;
+  background-color: rgb(156, 47, 17, 0.1);
+  /* border: 1px solid #ccc; */
+  border-radius: 10px;
+}
+
+.order-button {
+  display: inline-block;
+  text-align: center;
+  background-color: rgb(156, 47, 17, 0.7);
+  color: #fff;
+  padding: 10px;
+  text-decoration: none;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+}
+
+.hours-table {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: rgb(255, 255, 255, 0.6);
+}
+
+.hours-table h1 {
+  color: #333;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
 th {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    text-align: left;
+  color: #333;
+  padding: 10px;
+  text-align: left;
 }
-
-
+td {
+  border: 1px solid #333;
+  padding: 10px;
+  color: #333;
+  font-weight: bold;
+  background-color: rgb(156, 47, 17, 0.1);
+}
