--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,20 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   height: 100vh;
 }
 
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Adjust the opacity value (0.5) to control the darkness */
+  z-index: -1;
+}
 
 #welcome h1 {
     position: absolute;
@@ -172,13 +183,13 @@ table {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  background-color: rgb(255, 255, 255, 0.6);
+  background-color: rgb(255, 255, 255, 1);
 }
 
 .location {
   margin: 20px 0;
   padding: 10px;
-  background-color: rgb(156, 47, 17, 0.1);
+  background-color: rgb(156, 47, 17, 0.2);
   /* border: 1px solid #ccc; */
   border-radius: 10px;
 }
@@ -198,7 +209,7 @@ table {
   max-width: 800px;
   margin: 20px auto;
   padding: 20px;
-  background-color: rgb(255, 255, 255, 0.6);
+  background-color: rgb(255, 255, 255, 1);
 }
 
 .hours-table h1 {
@@ -220,5 +231,5 @@ td {
   padding: 10px;
   color: #333;
   font-weight: bold;
-  background-color: rgb(156, 47, 17, 0.1);
+  background-color: rgb(156, 47, 17, 0.2);
 }
