--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Adjust the opacity value (0.5) to control the darkness */
+  background: rgba(0, 0, 0, 0.5);
   z-index: -1;
 }
 
