--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,15 @@
 body {
   background: #fff;
   margin: 0;
+  padding: 0;
+  min-height: 100vh;
   background-image: url("../img/rest.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Create a semi-transparent overlay over the background image */
@@ -32,48 +35,48 @@ body::before {
   z-index: -1;
 }
 
+.welcome {
+  text-align: center; 
+  padding: 20px; 
+}
+
 /* Style for the 'welcome' section header */
-#welcome h1 {
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.welcome h1 {
+  font-size: clamp(3rem, 6vw, 4rem); 
   color: white;
-  font-size: clamp(4rem, 4vw, 3rem);
 }
 
 /* Style for the 'welcome' section paragraph */
-#welcome p {
-  position: absolute;
-  top: 25%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
+.welcome p {
   font-size: clamp(1rem, 2vw, 2rem);
+  color: white;
 }
 
+.about-us {
+  text-align: center;
+  padding: 20px;
+}
+
+
 /* Style for the 'about-us' section header */
-#about-us h2 {
-  position: absolute;
-  top: 47%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.about-us h2 {
+  margin-top: 10%;
   color: white;
-  font-size: clamp(4rem, 8vw, 2rem);
+  font-size: clamp(2rem, 8vw, 4rem); 
 }
 
 /* Style for the 'about-us' section paragraph */
-#about-us p {
-  position: absolute;
-  top: 58%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.about-us p {
+  padding-left: 10%;
+  padding-right: 10%;
   color: white;
-  font-size: clamp(1rem, 1.5vw, 1.5rem);
+  font-size: clamp(1rem, 1.5vw, 1.5rem); 
+  margin-bottom: 10%;
 }
 
 /* Style for a button element */
-.button {
+#button {
+  margin-top: 1%;
   display: inline-block;
   padding: 10px 20px;
   background-color: #FF5722;
@@ -83,16 +86,10 @@ body::before {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
-  text-align: center;
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 150px;
 }
 
 /* Apply a 'flame' animation to the button when it has the 'flame-animation' class */
-.button.flame-animation {
+#button.flame-animation {
   animation: flame 0.5s infinite alternate;
 }
 
@@ -110,7 +107,7 @@ body::before {
 }
 
 /* Style for the button when hovering over it */
-.button:hover {
+#button:hover {
   background-color: black;
   text-decoration: underline;
 }
@@ -164,14 +161,18 @@ body::before {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s;
   display: block;
-  margin-left: 47%;
+  margin: 0 auto;
 }
 
 /* Style for the review form submit button on hover */
 .review-form input[type="submit"]:hover {
-  background-color: #E64A19;
+  padding: 10px 20px;
+  background-color: #FF5722;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 /* Style for the newsletter container */
@@ -223,15 +224,22 @@ body::before {
   background-color: #E64A19;
 }
 
-/* Style for the footer containing contact information */
-#contact-info footer {
+/* Style for the footer */
+.contact-info {
+  margin-top: auto;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   background-color: #11101b;
   color: #fff;
   padding: 20px;
   text-align: center;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+}
+
+/* Style for footer content */
+.footer-content {
+  max-width: 800px; /* Adjust the maximum width as needed */
+  margin: 0 auto; /* Center the content horizontally */
 }
 
 /* Style for the header section, including navigation */
