changing cart + md in menu

--- a/css/Menu.css
+++ b/css/Menu.css
@@ -53,6 +53,7 @@ Menu div {
     width: 100%;
     text-align: center;
     color: white;
+    font-size:xx-large;
 } /* color, alignment for h1 */
 
 .Menu img {
