--- a/css/Locations.css
+++ b/css/Locations.css
@@ -12,15 +12,12 @@
 body {
   background: #fff;
   margin: 0;
-  padding: 0;
-  min-height: 100vh;
   background-image: url("../img/rest.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  display: flex;
-  flex-direction: column;
+  height: 100vh;
 }
 
 /* Create a semi-transparent overlay over the background image */
@@ -35,48 +32,48 @@ body::before {
   z-index: -1;
 }
 
-.welcome {
-  text-align: center; 
-  padding: 20px; 
-}
-
 /* Style for the 'welcome' section header */
-.welcome h1 {
-  font-size: clamp(3rem, 6vw, 4rem); 
+#welcome h1 {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: white;
+  font-size: clamp(4rem, 4vw, 3rem);
 }
 
 /* Style for the 'welcome' section paragraph */
-.welcome p {
-  font-size: clamp(1rem, 2vw, 2rem);
+#welcome p {
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: white;
+  font-size: clamp(1rem, 2vw, 2rem);
 }
-
-.about-us {
-  text-align: center;
-  padding: 20px;
-}
-
 
 /* Style for the 'about-us' section header */
-.about-us h2 {
-  margin-top: 10%;
+#about-us h2 {
+  position: absolute;
+  top: 47%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: white;
-  font-size: clamp(2rem, 8vw, 4rem); 
+  font-size: clamp(4rem, 8vw, 2rem);
 }
 
 /* Style for the 'about-us' section paragraph */
-.about-us p {
-  padding-left: 10%;
-  padding-right: 10%;
+#about-us p {
+  position: absolute;
+  top: 58%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: white;
-  font-size: clamp(1rem, 1.5vw, 1.5rem); 
-  margin-bottom: 10%;
+  font-size: clamp(1rem, 1.5vw, 1.5rem);
 }
 
 /* Style for a button element */
-#button {
-  margin-top: 1%;
+.button {
   display: inline-block;
   padding: 10px 20px;
   background-color: #FF5722;
@@ -86,10 +83,16 @@ body::before {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
+  text-align: center;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 150px;
 }
 
 /* Apply a 'flame' animation to the button when it has the 'flame-animation' class */
-#button.flame-animation {
+.button.flame-animation {
   animation: flame 0.5s infinite alternate;
 }
 
@@ -107,7 +110,7 @@ body::before {
 }
 
 /* Style for the button when hovering over it */
-#button:hover {
+.button:hover {
   background-color: black;
   text-decoration: underline;
 }
@@ -161,18 +164,14 @@ body::before {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s;
   display: block;
-  margin: 0 auto;
+  margin-left: 47%;
 }
 
 /* Style for the review form submit button on hover */
 .review-form input[type="submit"]:hover {
-  padding: 10px 20px;
-  background-color: #FF5722;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+  background-color: #E64A19;
 }
 
 /* Style for the newsletter container */
@@ -224,22 +223,15 @@ body::before {
   background-color: #E64A19;
 }
 
-/* Style for the footer */
-.contact-info {
-  margin-top: auto;
-  bottom: 0;
-  left: 0;
-  width: 100%;
+/* Style for the footer containing contact information */
+#contact-info footer {
   background-color: #11101b;
   color: #fff;
   padding: 20px;
   text-align: center;
-}
-
-/* Style for footer content */
-.footer-content {
-  max-width: 800px; /* Adjust the maximum width as needed */
-  margin: 0 auto; /* Center the content horizontally */
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 /* Style for the header section, including navigation */
