--- a/css/Home.css
+++ b/css/Home.css
@@ -50,6 +50,7 @@ body::before {
 .welcome p {
   font-size: clamp(1rem, 2vw, 2rem);
   color: white;
+  margin-bottom: -2%;
 }
 
 .about-us {
@@ -70,17 +71,17 @@ body::before {
   padding-right: 10%;
   color: white;
   font-size: clamp(1rem, 1.5vw, 1.5rem);
-  margin-bottom: 10%;
+  margin-bottom: 5%;
 }
 
 /* Style for a button element */
 #button {
-  margin-top: 1%;
   display: inline-block;
-  padding: 10px 20px;
+  padding: 20px 300px;
   background-color: #ff5722;
   color: #fff;
   text-decoration: none;
+  font-size: larger;
   border: none;
   border-radius: 5px;
   cursor: pointer;
