--- a/css/CartCss.css
+++ b/css/CartCss.css
@@ -62,7 +62,7 @@ header {
   display: flex;
 }
 
-.nav-bar ul li a {
+.nav-bar ul li.nav-item a {
   display: block;
   color: #fefefe;
   font-size: 20px;
@@ -79,34 +79,20 @@ header {
 }
 
 /* Style for navigation links on hover */
-.nav-bar ul li a:hover {
+.nav-bar ul li.nav-item a:hover {
   color: #11101b;
   background: #fefefe;
 }
 
 /* Style for navigation links' images on hover */
-.nav-bar ul li a:hover img {
+.nav-bar ul li.nav-item a:hover img {
   filter: invert(100%);
 }
 
 /* Style for navigation links when active */
-.nav-bar ul li a:active {
+.nav-bar ul li.nav-item a:active {
   color: #11101b;
   background: #fefefe;
-}
-
-/* Media query for smaller screens adjusting header padding */
-@media only screen and (max-width: 1320px) {
-  header {
-    padding: 0 50px;
-  }
-}
-
-/* Media query for even smaller screens further adjusting header padding */
-@media only screen and (max-width: 1100px) {
-  header {
-    padding: 0 30px;
-  }
 }
 
 /* Reset margin and padding for specific HTML elements */
